--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -86,6 +86,7 @@
 							<field name="start_date"/>
 							<field name="duration"/>
 							<field name="seats"/>
+							<field name="taken_seats" widget="progressbar"/>
 						</group>
 						<label for="attendee_ids"/>
 						<field name="attendee_ids"/>
@@ -101,6 +102,7 @@
 				<tree string="Session Tree">
 					<field name="name"/>
 					<field name="course_id"/>
+					<field name="taken_seats" widget="progressbar"/>
 				</tree>
 			</field>
 		</record>
