--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -231,5 +231,7 @@
 
 		<act_window id="launch_session_wizard" name="Add Attendees" src_model="openacademy.session" res_model="openacademy.wizard" view_mode="form" target="new" key2="client_action_multi"/>
 
+		<menuitem id="session_wizard_menu" name="Registro de asistentes" parent="openacademy_menu" action="launch_session_wizard"/>
+
 	</data>
 </openerp>
